# noteshrink-rs

./: Cargo.toml  Justfile  README.md  Trunk.toml  index.html  styles.sass
noteshrink-app/: Cargo.toml  tauri.conf.json
noteshrink-app/src/: main.rs
noteshrink-core/: Cargo.toml
noteshrink-core/src/: main.rs
sass/: hamburger.sass
src/: app.rs  hamburger.rs  main.rs
