[package]
name = "noteshrink-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }

# TODO: Probably could srhink feature set dramatically.
image = "0.25.1"

[dev-dependencies]
approx = "0.5.1"
